--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -80,7 +80,7 @@
 \newcommand{\lstml}{
 \lstset{ %
 language=ML, % choose the language of the code
-basicstyle=\small\ttfamily,       % the size of the fonts that are used for the code
+basicstyle=\footnotesize\ttfamily,       % the size of the fonts that are used for the code
 keywordstyle=\color{Bittersweet},
 % numbers=left,                   % where to put the line-numbers
 numberstyle=\tiny,      % the size of the fonts that are used for the line-numbers
@@ -96,7 +96,7 @@ breaklines=true,                % sets automatic line breaking
 breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
 commentstyle=\itshape\color{MidnightBlue},
 %escapeinside={\%*}{*)},         % if you want to add a comment within your code
-morekeywords={module, @@deriving, not, : , /\\}
+morekeywords={module, when, @@deriving, not, : , /\\}
 }}
 \lstnewenvironment{ocaml}
     { % \centering
