--- a/paper/list-code.tex
+++ b/paper/list-code.tex
@@ -23,37 +23,47 @@ end
 \label{fig:mlist-sig}
 \end{subfigure}
 
-\begin{subfigure}{0.7\textwidth}
+\begin{subfigure}{0.75\textwidth}
 \begin{ocaml}
 (*
- * Assumption: subst edits are at the end of the edit seq.
- *)
-let pull_substs edits = 
-  let (substs,others) = List.partition 
-                          (function | S (_,_,_) -> true
-                             | _ -> false) edits in
-  let xform other subst = match (other, subst)  with 
-    | (I (_,i), S (j,x,y)) when (j>i) -> S (j-1,x,y)
-    | (D i, S (j,x,y)) when (j>=i) ->  S (j+1,x,y)
-    | _ -> subst in
-  let substs' = List.map 
-                  (List.fold_right xform others) substs in
-    substs'@others
-
+ * We reduce the problem of transforming op1* w.r.t op2* 
+ * first to the problem of transforming op1* w.r.t op2,
+ * and then to the problem of transforming op1 w.r.t op2.
+*)
 let op_transform mine others = 
-  let xform my other = match (my,other)  with 
-    | (I (x,j), I (_,i)) when (j>=i) -> I (x,j+1)
-    | (D j, I (_,i)) when (j>=i) -> D (j+1)
-    | (S (j,x,y), I (_,i)) when (j>=i) -> S (j+1,x,y)
-    | (I (x,j), D i) when (j>i) ->  I (x,j-1)
-    | (D j, D i) when (j=i) ->  Nop
-    | (D j, D i) when (j>i) ->  D (j-1)
-    | (S (j,x,y), D i) when (j=i) -> Nop
-    | (S (j,x,y), D i) when (j>i) -> S (j-1,x,y)
-    | (S (j,x,y), S (i,_,z)) when (j=i) -> S (j,x,A.merge x y z) 
-    | _ -> my in
-  let mine' = List.map (fun my -> List.fold_left 
-                            xform my others) @@ pull_substs mine in
+  (*
+   * Transforms my edit w.r.t other edit, and also returns how 
+   * edits following my edit will witness the other edit.
+   *)
+  let xform my other = 
+    let f my' = (my',other) in
+    let g other' = (my,other') in
+      match (my,other)  with 
+      | (I (x,j), I (_,i)) when (j>=i) -> f @@ I (x,j+1)
+      | (D j, I (_,i)) when (j>=i) -> f @@ D (j+1)
+      | (S (j,x,y), I (_,i)) when (j>=i) -> f @@ S (j+1,x,y)
+      | (I (x,j), D i) when (j=i) ->  g @@ Nop
+      | (I (x,j), D i) when (j>i) ->  f @@ I (x,j-1)
+      | (D j, D i) when (j=i) -> (Nop, Nop)
+      | (D j, D i) when (j>i) ->  f @@ D (j-1)
+      | (S (j,x,y), D i) when (j=i) -> f @@ Nop
+      | (S (j,x,y), D i) when (j>i) -> f @@ S (j-1,x,y)
+      | (I (x,j), S (i,y,z)) when (j<=i) -> g @@ S (i+1,y,z)
+      | (D j, S (i,y,z)) when (j=i) -> g @@ Nop
+      | (D j, S (i,y,z)) when (j<i) -> g @@ S (i-1,y,z)
+      | (S (j,x,y), S (i,_,z)) when (j=i) -> f @@ S (j,x,A.merge x y z) 
+      | _ -> f @@ my in
+  let mine' = 
+    List.fold_left 
+      (fun mine other -> 
+         let (mine',_) = 
+           List.fold_left 
+             (fun (xformed, other) my -> 
+                let (my',other') = xform my other in
+                  (xformed@[my'],other')) 
+             ([],other) mine in
+           mine') 
+      mine others in
     mine'
 \end{ocaml}
 \caption{Operational transformation of list operations}
