edits to related work

--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -310,6 +310,7 @@ morekeywords={module, when, @@deriving, not, : , /\\}
 
 \input{mergeable-types}
 
+\input{related}
 %% Acknowledgments
 % \begin{acks}                            %% acks environment is optional
 %                                         %% contents suppressed with 'anonymous'
