--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -68,6 +68,7 @@
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 \newcommand{\mbleto}{\rightsquigarrow_m}
 \newcommand{\drawsome}{{\sf Canvas}\xspace}
+\newcommand{\buylist}{{\sf ToBuy}\xspace}
 \newcommand{\lang}{\lambda_b}
 \newcommand{\length}[1]{\left|#1\right|}
 
@@ -97,7 +98,7 @@ breaklines=true,                % sets automatic line breaking
 breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
 commentstyle=\itshape\color{MidnightBlue},
 %escapeinside={\%*}{*)},         % if you want to add a comment within your code
-morekeywords={module, when, @@deriving, not, : , /\\}
+morekeywords={module, match, when, @@deriving, not, : , /\\}
 }}
 \lstnewenvironment{ocaml}
     { % \centering
@@ -334,8 +335,6 @@ morekeywords={module, when, @@deriving, not, : , /\\}
 
 %% Appendix
 \appendix
-\section{Appendix}
-
-Text of appendix \ldots
+\input{appendix}
 
 \end{document}
