--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -71,6 +71,7 @@
 \newcommand{\buylist}{{\sf ToBuy}\xspace}
 \newcommand{\lang}{\lambda_b}
 \newcommand{\length}[1]{\left|#1\right|}
+\newcommand{\GK}[1]{\textcolor{red}{GK: #1}}
 
 % New colors
 %------------
