--- a/paper/model.tex
+++ b/paper/model.tex
@@ -297,7 +297,7 @@ while preserving the following properties:
   the final list. No element is deleted unless it is deleted in at
   least one list.
   \item An element deleted in one list will not reappear in the merged
-  list.
+  list (unlike Amazon's replicated shopping cart~\cite{dynamo}).
   \item The order of elements is retained. That is, if $x$ occurs
   before $y$ in one of the lists, and if both elements are present in
   the merged list, then $x$ occurs before $y$ also in the merged list.
@@ -374,11 +374,36 @@ lists, $v_1$ and $v_2$ w.r.t their common ancestor $v$, transforms one
 of them (say, $s_1$) w.r.t $s_2$ to obtain $s_1'$, and finally applies
 (the operations defined by) $s_1'$ to $v_2$ to obtain the merged list.
 
-A signficant advantage of mergeable types is their composability. For
-instance, a mergeble list of counters can be obtained simply by
-instantiating \C{MList} for \C{Counter} (i.e., \C{MList(Counter)}). A
-non-trivial demonstration of the utility of such composability is
-given below.
+\GK{Somewhere here, I want to say:} To better appreciate the virtues
+of mergeable types, we encourage the reader to think about how one
+might implement the mergeable list type with the explicit effect
+representation described in Sec.~\ref{sec:intro}.
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.4]{Figures/shopping-list}
+
+  \caption{Merging concurrent shopping lists}
+  \label{fig:shopping-list}
+\end{figure}
+
+A significant advantage of mergeable types is their composability. As
+demonstrated by \C{MList}, the merge semantics of a composed mergeable
+type is a composition of merge semantics of the individual types.  For
+instance, a mergeable list of integers can be obtained by
+instantiating \C{MList} for an \C{Int} type, where \C{Int.merge} is
+same as \C{Counter.merge} (Sec.~\ref{sec:intro}). 
+An alternative instantiation of \C{MList} is for a quantity type
+(\C{Qty}) that, like \C{Int}, supports \C{add} and \C{subtract}
+operations, but defines its \C{merge} semantics a little differently:
+\begin{ocaml}
+let merge lca v1 v2 = if v1 = lca then v2 else (if v2 = lca then v1 else max v1 v2)
+\end{ocaml}
+\C{MList(Qty)}, like \C{MList(Int)}, is a list of integers, and has
+the same semantics under a sequential execution. Their differences
+however manifest under a concurrent execution, where both adopt
+different methods to reconcile concurrent updates.  is given
+below.
 
 % The mergeable list data type demonstrates a common pattern of writing
 % \C{merge} functions applicable to a range of functional data
@@ -392,24 +417,33 @@ given below.
 %   in-order traversal, followed by reconstructing the tree.
 % }.
 
-{\bf Shopping List}. A shopping list is an 
 
-This example, however, implicitly makes certain assumptions
-about the model and the underlying system, such as the existence of a
-single least common ancestor (LCA) for any pair of versions, the
-ability to access a previous version on any branch, and mergeability
-of any two concurrent versions. Enforcing these guarantees in a fully
+{\bf Shopping List}. A non-trivial demonstration of composability of
+mergeable types is a shopping list application. The application
+allows its users to collaboratively build a grocery shopping
+list (listing items in decreasing ), by adding new items with a
+specified quantity, deleting existing items, and increasing or
+decreasing their quantity. An item (\C{Item.t}) is represented as a
+tuple of its name (a string) and the quantity (A \C{Qty.t}). Merge
+function for \C{Item.t} merges the quantities of items (using
+\C{Qty.merge}) with same names. Items with different names are
+considered distinct. A shopping list is a mergeable list of items
+(i.e., \C{MList(Item)}). \C{MList(Item).merge} automatically lifts the
+merge semantics for items to merge semantics for lists of items.
+Fig.~\ref{fig:shopping-list} illustrates. Here, two users, Alice and
+Bob, concurrently edit a shopping list whose initial contents are
+as milk and eggs. While both simultaneously update the quantity of
+eggs, Bob also removes milk and inserts candy. The merged shopping
+list contains eggs and candy, where the quantity of eggs is obtained
+by merging Alice's and Bob's quantity as per \C{Qty.merge} semantics.
+
+The examples described above make certain assumptions about the model
+and the underlying system, such as the existence of a single least
+common ancestor (LCA) for any pair of versions, the ability to access
+a previous version on any branch, and mergeability of any two
+concurrent versions. Enforcing these guarantees in a fully
 decentralized distributed setting requires addressing non-trivial
-theoretical challenges described in the next section. Unlike the
-canvas, the process of writing merge functions for data types with
-non-trivial invariants could be quite involved. The following sections
-describe a principled approach to deriving merge functions for any
-data type given its invariants. Like \C{Canvas.merge}, merge functions
-often need to compare multiple versions of a data type for structural
-equality, which, when performed naively, incurs cost linear in the
-size of versions. The representation of a versioned data type in \name
-is optimized for performing comparisons that allows structural
-equality to be determined in constant time. Such engineering details,
-which contribute to the practicality of our programming model are also
-discussed in subsequent sections.
+theoretical challenges. These, and other details that contribute to
+the practicality of our model, such as containing the complexity of
+merges, are discussed in subsequent sections.
 
