--- a/paper/model.tex
+++ b/paper/model.tex
@@ -326,10 +326,9 @@ The functions are described below.
   applied on \C{v} to obtain \C{v'}. Such a sequence is called an
   \emph{edit sequence}. The length of the sequence corresponds to the
   standard notion of the \emph{edit distance} between the two lists,
-  which can be computed in polynomial time, for e.g., using the
-  Wagner-Fisher algorithm~\cite{wagner-fischer}. \C{edit\_seq} uses a
-  slight modification of Wagner-Fischer, that also lets it compute the
-  edit sequence (an \C{edit list}). The implementation specified in
+  which can be computed in polynomial time~\cite{wagner-fischer}.
+  \C{edit\_seq} modifies one such algorithm to also compute the edit
+  sequence (an \C{edit list}). The implementation specified in
   Fig.~\ref{fig:mlist-sig} represents edits using the type \C{edit}.
   Constructors \C{I}, \C{D}, and \C{S} stand for \C{insert},
   \C{delete}, and \C{subst}, respectively\footnote{
